--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ body{
     right: 1px;
     border-radius: 50%;
     cursor: pointer;
+    transition: 1s ease all;
 }
 .sidebar{
     width: 50px;
@@ -201,4 +202,33 @@ body{
     color: lightgrey;
     opacity: 0.5;
     cursor: pointer;
+}
+.container.active{
+    background-color: white;
+}
+.movie-list-title.active{
+    color: black;
+}
+.navbar-container.active{
+    color: black;
+    background-color: white;
+}
+.sidebar.active{
+    background-color: white;
+}
+.left-menu-icon.active{
+    color: black;
+}
+.toggle.active{
+    background-color: black;
+}
+.toggle-ball.active{
+    background-color: white;
+    transform: translateX(-20px);
+}
+
+@media only screen and (max-width:940px){
+    .menu-container{
+        display: none;
+    }
 }
